--- a/src/routes/Layout/pages/styles/ProgramDetails.module.scss
+++ b/src/routes/Layout/pages/styles/ProgramDetails.module.scss
@@ -12,8 +12,9 @@
             width: 100%;
             height: 100%;
             min-height: 30rem;
+            margin-right: auto;
             background-position: center;
-            background-size: cover;
+            background-size: contain;
             background-repeat: no-repeat;
         }
     }
@@ -55,6 +56,7 @@
             margin-bottom: 1rem;
         }
         &__content {
+            text-align: left;
             font-size: 1.5rem;
         }
     }
