Small fixes at articles

--- a/src/routes/Layout/pages/styles/Articles.module.scss
+++ b/src/routes/Layout/pages/styles/Articles.module.scss
@@ -25,9 +25,18 @@
 .blogLink,
 .articleLink {
     display: block;
+    position: relative;
     &__header{
-        font-size: 2rem;
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        background-color: #80808091;
+        font-size: 1.7rem;
         padding: 1rem 2rem;
+        color: white;
+        pointer-events: none;
+        z-index: 100;
     }
     &__image{
         height: 30rem;
