--- a/src/routes/Layout/pages/styles/BlogArticle.module.scss
+++ b/src/routes/Layout/pages/styles/BlogArticle.module.scss
@@ -1,6 +1,10 @@
 .root {
     padding: 1rem 5rem;
     position: relative;
+    font-size: 1.5rem;
+    background-color: white;
+    margin: 0 auto 6rem auto;
+    max-width: 1200px;
     @media screen and (max-width: 600px) {
         padding: 0;
     }
@@ -9,6 +13,12 @@
     }
     p {
         text-align: left;
-        font-size: 1.3rem;
+        font-size: 1.5rem;
+    }
+    a{
+        color: #3600ff;
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
