--- a/src/components/Admin/routes/styles.module.scss
+++ b/src/components/Admin/routes/styles.module.scss
@@ -57,7 +57,8 @@
     background-size: contain;
     background-repeat: no-repeat;
 }
-.delete {
+.delete,
+.edit {
     font-size: 1.5rem;
     position: absolute;
     top: 0;
@@ -75,6 +76,10 @@
     svg {
         display: block;
     }
+}
+.edit {
+    left: 0; 
+    right: auto;
 }
 
 
