--- a/src/components/Admin/components/styles.module.scss
+++ b/src/components/Admin/components/styles.module.scss
@@ -3,9 +3,7 @@
     height: 30rem;
     width: 80%;
     margin: 0 auto;
-    border: 1px solid #333;
-    border-radius: 5px;
-    object-fit: cover;
+    object-fit: contain;
 }
 .buttons {
     button {
