--- a/src/routes/Layout/pages/styles/ProgramDetails.module.scss
+++ b/src/routes/Layout/pages/styles/ProgramDetails.module.scss
@@ -62,6 +62,7 @@
             text-align: left;
             font-size: 1.5rem;
             padding: 0 2rem;
+            line-height: 1.5;
         }
     }
 }
