--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -183,15 +183,11 @@
         
     }
     &__footer{
-        // display: flex;
-        // flex-direction: column;
-        // align-items: center;
         .button{
             position: relative;
             font-weight: bold;
             font-size: 1.8rem;
             color: #333;
-            // background-color: #fcfcfc99;
             padding: .5rem 2rem;
         }
         .icon-container{
@@ -212,8 +208,9 @@
         width: 100%;
         height: 100%;
         margin-left: auto;
-        background: radial-gradient(circle 40vw at -20% 90%, #efefef 10%, transparent), 
-        url('../../../assets/images/home/programs-min.jpg') right bottom/ contain no-repeat fixed;
+        // background: radial-gradient(circle 40vw at -20% 90%, #efefef 10%, transparent), 
+        // url('../../../assets/images/home/programs-min.jpg') right center/ contain no-repeat fixed;
+        background: url('../../../assets/images/home/programs-min.jpg') right center/ contain no-repeat fixed;
         @media screen and (max-width: 600px) {
             width: 100%;
             height: 92%;
@@ -233,6 +230,14 @@
             transform: translateX(0);
             opacity: 1;
         }
+        .header{
+            font-size: 2rem;
+            font-weight: bold;
+
+        }
+        .text {
+            text-align: left;
+        }
         @media screen and (max-width: 600px) {
            left: 0;
            width: 80%;
@@ -241,6 +246,23 @@
         .link{
             margin-top: 2rem;
          }
+    }
+    &__footer{
+        .button{
+            position: relative;
+            font-weight: bold;
+            font-size: 1.8rem;
+            color: #333;
+            padding: .5rem 2rem;
+        }
+        .icon-container{
+            display: block;
+            font-size: 2rem;
+            color:#333;
+            .icon{
+                animation: 5s ease infinite iconDown;
+            }
+        }
     }
 }
 
