--- a/src/components/shared/PageTitle.module.scss
+++ b/src/components/shared/PageTitle.module.scss
@@ -2,6 +2,7 @@
     font-size: 3rem;
     border-bottom: 1px solid gray;
     margin: 1rem 0;
+    margin-bottom: 4rem;
     padding: 0 2rem;
     
     .title {
