--- a/src/routes/Layout/pages/styles/About.module.scss
+++ b/src/routes/Layout/pages/styles/About.module.scss
@@ -15,13 +15,7 @@
             padding: 5rem 10rem;
             opacity: 0;
             transform: translateY(30px);
-            animation: show 1s ease forwards;
-            &:nth-child(1){
-                animation-delay: .5s;
-            }
-            &:nth-child(2){
-                animation-delay: .7s;
-            }
+            animation: show 1s ease .5s forwards;
 
             @media screen and (max-width: 1280px) {
                 padding: 3rem 4rem;
