--- a/src/routes/Layout/pages/styles/Gallery.module.scss
+++ b/src/routes/Layout/pages/styles/Gallery.module.scss
@@ -1,5 +1,5 @@
 .content {
-    padding: 4rem 5rem;
+    padding: 0 5rem 4rem 5rem;
     @media screen and (max-width: 600px) {
         padding: 1rem 1rem;
     }
