--- a/src/routes/Layout/pages/styles/TourDetails.module.scss
+++ b/src/routes/Layout/pages/styles/TourDetails.module.scss
@@ -26,20 +26,25 @@
         & > div {
             display: flex;
             flex-flow: row nowrap;
-            align-items: center;
+            // align-items: center;
             justify-content: space-between;
             font-size: 1.5rem;
         }
-        &__place {
-            & > div:first-child {
+        &__place,
+        &__auditory {
+            div:first-child {
                 text-align: left;
+                flex-shrink: 0;
+                margin-right: 2rem;
             }
-            & > div:last-child {
+            div:last-child {
                 text-align: right;
+                flex-shrink: 1;
             }
         }
         .buttons{
             flex-flow: column nowrap;
+            align-self: center;
             & > div {
                 margin-bottom: 1rem ;
             }
