--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -527,8 +527,8 @@
          }
 
         .content {
-            margin-top: 5rem;
-            margin-right: 5rem;
+            // margin-top: 5rem;
+            // margin-right: 5rem;
             transition: all 1s ease .5s;
             transform: translateY(30px);
             opacity: 0;
@@ -629,6 +629,11 @@
             p {
                 margin: 0 0 0 2rem;
             }
+        }
+    }
+    .socials {
+        a {
+            color: #3b5998;
         }
     }
 
