--- a/src/routes/Layout/pages/styles/About.module.scss
+++ b/src/routes/Layout/pages/styles/About.module.scss
@@ -43,6 +43,8 @@
                         display: flex;
                         align-items: center;
                         justify-content: center;
+                        font-size: 2rem;
+                        color: #3b5998;
                         p {
                             margin: 0 0 0 1rem;
                         }
