--- a/src/routes/Layout/pages/styles/Contacts.module.scss
+++ b/src/routes/Layout/pages/styles/Contacts.module.scss
@@ -14,12 +14,18 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-size: 2rem;
         svg {
             transform: translateY(3px)
         }
         p {
             margin: 0 0 0 2rem;
         }
+    }
+}
+.socials {
+    a{
+        color: #3b5998;
     }
 }
 
