--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -145,41 +145,35 @@
         background-color: #0f5812b3;
         padding: 5rem 3rem;
         color: white;
-        // opacity: 0;
-        // transition: all 1s ease .2s;
-        // &.visible {
-        //     opacity: 1; 
-        //     .element{
-        //         opacity: 1;
-        //         transform: translateY(0);
-        //     }
-        // }
-
-        // .element{
-            // transition: all .5s ease;
-            // opacity: 0;
-            // transform: translateY(-20px);
-            // &:nth-child(1){
-            //     transition-delay: .5s;
-            // }
-            // &:nth-child(2){
-            //     transition-delay: .6s;
-            // }
-            // &:nth-child(3){
-            //     transition-delay: .7s;
-            // }
-            // &:nth-child(4){
-            //     transition-delay: .8s;
-            // }
-        // }
-
-        .title{
-            font-size: 2rem;
-            margin-bottom: 2rem;
+        .element {
+            opacity: 0;
+            transform: translate3d(0, 30px, 0);
+            transition: all 1s cubic-bezier(.2, .69, .49, .95);
+            will-change: transform, opacity;
+            &:nth-child(1) {
+                transition-delay: .1s;
+            }
+            &:nth-child(2) {
+                transition-delay: .2s;
+            }
+            &:nth-child(3) {
+                transition-delay: .3s;
+            }
+            .title{
+                font-size: 2rem;
+                margin-bottom: 2rem;
+            }
+            .subtitle {
+                font-size: 1.3rem;
+            }
         }
-        .subtitle {
-            font-size: 1.3rem;
+        &.visible {
+            .element {
+                opacity: 1;
+                transform: translate3d(0, 0, 0);
+            }
         }
+
         
     }
     &__footer{
@@ -203,15 +197,35 @@
 
 .ProgramsScreen{
     display: flex;
-    .image{
-        display: block;
-        width: 100%;
-        height: 100%;
-        margin-left: auto;
-        background: url('../../../assets/images/home/programs-min.jpg') right center/ cover no-repeat ;
-        @media screen and (max-width: 600px) {
+    .imageContainer {
+        position: relative;
+        overflow: hidden;
+        &.visible {
+            .imageDamper {
+                transform: translate3d(100%, 0, 0);
+            }
+        }
+        .imageDamper {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background-color: #efefef;
+            will-change: transform;
+            transform: translate3d(0,0,0);
+            transition: all 1s cubic-bezier(.2, .69, .49, .95);
+        }
+        .image{
+            display: block;
             width: 100%;
-            height: 92%;
+            height: 100%;
+            margin-left: auto;
+            background: url('../../../assets/images/home/programs-min.jpg') right center/ cover no-repeat ;
+            @media screen and (max-width: 600px) {
+                width: 100%;
+                height: 92%;
+            }
         }
     }
     .content {
@@ -220,30 +234,38 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        opacity: 0;
-        transform: translateX(-50px);
-        transition: all 1s ease .5s;
         font-size: 1.5rem;
+        & > div {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: all 1s cubic-bezier(.2, .69, .49, .95);
+            will-change: transform, opacity;
+        }
         &.visible {
-            transform: translateX(0);
-            opacity: 1;
+            & > div {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
         .header{
             font-size: 2rem;
             font-weight: bold;
+            transition-delay: .1s;
         }
         .text {
             text-align: left;
             margin: 1rem auto;
-        }
-        @media screen and (max-width: 600px) {
-           left: 0;
-           width: 80%;
-           font-size: 1.2rem;
+            transition-delay: .2s;
         }
         .link{
             margin-top: 2rem;
-         }
+            transition-delay: .3s;
+        }
+        @media screen and (max-width: 600px) {
+            left: 0;
+            width: 80%;
+            font-size: 1.2rem;
+        }
     }
     &__footer{
         .button{
@@ -267,20 +289,40 @@
 .ClassesScreen{
     display: flex;
     padding-bottom: 7rem;
-    
-    .image{
-        display: block;
-        width: 100%;
-        height: 100%;
-        margin-right: auto;
-        background: url('../../../assets/images/home/classes-min.jpg') left top/ cover no-repeat ;
-        @media screen and (max-width: 600px) {
+    .imageContainer {
+        position: relative;
+        overflow: hidden;
+        &.visible {
+            .imageDamper {
+                transform: translate3d(-100%, 0, 0);
+            }
+        }
+        .imageDamper {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background-color: #efefef;
+            will-change: transform;
+            transform: translate3d(0,0,0);
+            transition: all 1s cubic-bezier(.2, .69, .49, .95);
+        }
+        .image{
+            display: block;
             width: 100%;
-            height: 92%;
-            background-position: left bottom;
-            margin-top: auto;
+            height: 100%;
+            margin-right: auto;
+            background: url('../../../assets/images/home/classes-min.jpg') left top/ cover no-repeat ;
+            @media screen and (max-width: 600px) {
+                width: 100%;
+                height: 92%;
+                background-position: left bottom;
+                margin-top: auto;
+            }
         }
     }
+    
     
     .content {
         padding: 2rem;
@@ -288,24 +330,32 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        opacity: 0;
-        transform: translateX(50px);
-        transition: all 1s ease .5s;
         font-size: 1.5rem;
+        & > div {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: all 1s cubic-bezier(.2, .69, .49, .95);
+            will-change: transform, opacity;
+        }
         &.visible {
-            transform: translateX(0);
-            opacity: 1;
+            & > div {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
         .header{
             font-size: 2rem;
             font-weight: bold;
+            transition-delay: .1s;
         }
         .text {
             text-align: left;
             margin: 1rem auto;
+            transition-delay: .2s;
         }
         .link{
             margin-top: 2rem;
+            transition-delay: .3s;
         }
         @media screen and (max-width: 600px) {
             left: 0;
@@ -322,24 +372,27 @@
         &.visible {
             .element {
                 opacity: 1;
+                transform: translate3d(0,0,0);
             }
         }
 
         .element {
             padding: 1rem;
             opacity: 0;
-            transition: all .5s ease;
+            transform: translate3d(0, 30px,0);
+            transition: all .5s cubic-bezier(.2, .69, .49, .95);
+            will-change: transform, opacity;
             &:nth-child(1){
-                transition-delay: .5s;
+                transition-delay: .1s;
             }
             &:nth-child(2){
-                transition-delay: .6s;
+                transition-delay: .2s;
             }
             &:nth-child(3){
-                transition-delay: .7s;
+                transition-delay: .3s;
             }
             &:nth-child(4){
-                transition-delay: .8s;
+                transition-delay: .4s;
             }
             .reviewPhoto{
                 display: flex;
@@ -392,24 +445,35 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        opacity: 0;
-        transform: translateX(-50px);
-        transition: all 1s ease .5s;
         font-size: 1.5rem;
+        // opacity: 0;
+        // transform: translateX(-50px);
+        // transition: all 1s ease .5s;
+        & > div {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: all 1s cubic-bezier(.2, .69, .49, .95);
+            will-change: transform, opacity;
+        }
         &.visible {
-            transform: translateX(0);
-            opacity: 1;
+            & > div {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
         .header{
             font-size: 2rem;
             font-weight: bold;
+            transition-delay: .1s;
         }
         .text {
             text-align: left;
             margin: 1rem auto;
+            transition-delay: .2s;
         }
         .link{
             margin-top: 2rem;
+            transition-delay: .3s;
         }
         @media screen and (max-width: 600px) {
             left: 0;
@@ -433,10 +497,10 @@
                 opacity: 1;
             }
         }
-        @media screen and (max-width: 600px) {
-           margin-top: 4rem;
-           transform: scale(.45)
-        }
+        // @media screen and (max-width: 600px) {
+        //    margin-top: 4rem;
+        //    transform: scale(.45)
+        // }
         .image{
             position: relative;
             box-shadow: 0px 20px 20px rgba(0,0,0,.5);
@@ -455,7 +519,7 @@
             background: url('../../../assets/images/home/gallery-1-min.jpg') left top/ cover no-repeat;
             transform: rotate(-5deg);
             z-index: 3;
-            transition: opacity .5s ease .5s, transform .7s ease, filter .7s ease;
+            transition: opacity 1s ease .1s, transform .7s ease, filter .5s ease;
             &:hover {
                 z-index: 10;
                 transform: rotate(-5deg) scale(1.03);
@@ -467,7 +531,7 @@
             background: url('../../../assets/images/home/gallery-2.jpg') left top/ cover no-repeat;
             transform: rotate(3deg);
             z-index: 2;
-            transition: opacity .5s ease .6s, transform .7s ease, filter .7s ease;
+            transition: opacity 1s ease .2s, transform .7s ease, filter .7s ease;
             &:hover {
                 z-index: 10;
                 transform: rotate(3deg) scale(1.03);
@@ -479,7 +543,7 @@
             background: url('../../../assets/images/home/gallery-3.jpg') left top/ cover no-repeat;
             transform: rotate(12deg) translateY(20px);
             z-index: 1;
-            transition: opacity .5s ease .7s, transform .7s ease, filter .7s ease;
+            transition: opacity 1s ease .3s, transform .7s ease, filter .7s ease;
             &:hover {
                 z-index: 10;
                 transform: rotate(12deg) translateY(20px) scale(1.03);
@@ -493,20 +557,28 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        opacity: 0;
-        transition: all 1.5s ease .5s;
+        & > div {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: all 1s cubic-bezier(.2, .69, .49, .95);
+            will-change: transform, opacity;
+        }
         &.visible {
-            transform: translateY(0);
-            opacity: 1;
+            & > div {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
         @media screen and (max-width: 600px) {
             display: block;
         }
         .text{
             font-size: 1.5rem;
+            transition-delay: .1s;
         }
         .link{
             margin-top: 3rem;
+            transition-delay: .2s;
          }
     }
 }
@@ -525,7 +597,7 @@
         .content {
             margin-top: 5rem;
             margin-right: 5rem;
-            transition: all 1s ease .5s;
+            transition: all 1s ease;
             transform: translateY(30px);
             opacity: 0;
             &.visible {
@@ -573,33 +645,31 @@
         justify-content: center;
         width: 80%;
         opacity: 0;
-        transition: all 1.5s ease .5s;
+        transform: translateY(30px);
+        transition: all 1s ease ;
         &.visible {
             transform: translateY(0);
             opacity: 1;
         }
-        .text{
-            font-size: 1.5rem;
-        }
         .link{
             margin-top: 2rem;
          }
-         .footer {
-            align-self: stretch;
-            padding-top: 3rem;
-            font-size: 2rem;
-            color: #333;
-            display: flex;
-            flex-flow: row;
-            align-items: center;
-            justify-content: space-between;
-            a{
-                transition: all .3s ease;
-                &:hover{
-                    transform: scale(1.3)
-                }
-            }
-        }
+        //  .footer {
+        //     align-self: stretch;
+        //     padding-top: 3rem;
+        //     font-size: 2rem;
+        //     color: #333;
+        //     display: flex;
+        //     flex-flow: row;
+        //     align-items: center;
+        //     justify-content: space-between;
+        //     a{
+        //         transition: all .3s ease;
+        //         &:hover{
+        //             transform: scale(1.3)
+        //         }
+        //     }
+        // }
     }
 }
 
