--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -595,8 +595,6 @@
          }
 
         .content {
-            margin-top: 5rem;
-            margin-right: 5rem;
             transition: all 1s ease;
             transform: translateY(30px);
             opacity: 0;
@@ -654,22 +652,6 @@
         .link{
             margin-top: 2rem;
          }
-        //  .footer {
-        //     align-self: stretch;
-        //     padding-top: 3rem;
-        //     font-size: 2rem;
-        //     color: #333;
-        //     display: flex;
-        //     flex-flow: row;
-        //     align-items: center;
-        //     justify-content: space-between;
-        //     a{
-        //         transition: all .3s ease;
-        //         &:hover{
-        //             transform: scale(1.3)
-        //         }
-        //     }
-        // }
     }
 }
 
@@ -679,6 +661,12 @@
     align-items: center;
     justify-content: center;
     font-size: 2rem;
+    opacity: 0;
+    transition: all 1s ease;
+    will-change: opacity;
+    &.visible {
+        opacity: 1;
+    }
 
     & > div {
         margin: 1rem 0;
