--- a/src/routes/Layout/pages/styles/BlogArticle.module.scss
+++ b/src/routes/Layout/pages/styles/BlogArticle.module.scss
@@ -6,7 +6,7 @@
     margin: 0 auto 6rem auto;
     max-width: 1200px;
     @media screen and (max-width: 600px) {
-        padding: 0;
+        padding: 0 1rem;
     }
     img {
         width: 100%;
