--- a/src/routes/Layout/pages/styles/ClassDetails.module.scss
+++ b/src/routes/Layout/pages/styles/ClassDetails.module.scss
@@ -3,6 +3,9 @@
     background-color: white;
     max-width: 1200px;
     margin: 0 auto 6rem auto;
+    @media screen and (max-width: 960px) {
+        padding: 0;
+    }
     .title {
         font-size: 3rem;
         margin-bottom: 2rem;
@@ -23,10 +26,12 @@
     }
     .info {
         padding: 1rem 3rem;
+        @media screen and (max-width: 960px){
+           padding: 0 2rem;
+        }
         & > div {
             display: flex;
             flex-flow: row nowrap;
-            // align-items: center;
             justify-content: space-between;
             font-size: 1.5rem;
         }
@@ -52,6 +57,9 @@
         .register,
         .order{
             justify-content: center;
+            @media screen and (max-width: 960px){
+                margin-top: 2rem;
+            }
             & > div {
                 padding: 0 3rem;
                 font-size: 1.5rem;
