--- a/src/routes/Layout/pages/styles/Contacts.module.scss
+++ b/src/routes/Layout/pages/styles/Contacts.module.scss
@@ -39,4 +39,8 @@
     align-items: center;
     justify-content: space-evenly;
     font-size: 1.2rem;
+    @media screen and (max-width: 600px){
+        bottom: 0;
+        margin: -1rem auto 0 auto !important;
+    }
 }
