--- a/src/routes/Layout/pages/styles/ProgramDetails.module.scss
+++ b/src/routes/Layout/pages/styles/ProgramDetails.module.scss
@@ -3,6 +3,9 @@
     background-color: white;
     max-width: 1200px;
     margin: 0 auto 6rem auto;
+    @media screen and (max-width: 960px) {
+        padding: 0;
+    }
     .title {
         font-size: 3rem;
         margin-bottom: 2rem;
@@ -42,6 +45,9 @@
         }
         .register{
             justify-content: center;
+            @media screen and (max-width: 960px){
+                margin-top: 2rem;
+            }
             & > div {
                 padding: 0 3rem;
                 font-size: 1.5rem;
@@ -64,6 +70,9 @@
     }
     .description {
         margin: 2rem auto;
+        @media screen and (max-width: 600px){
+            margin: 0 auto;
+        }
         &__title {
             font-size: 2rem;
             margin-bottom: 1rem;
