--- a/src/routes/Layout/pages/styles/Programs.module.scss
+++ b/src/routes/Layout/pages/styles/Programs.module.scss
@@ -26,6 +26,7 @@
 .program {
     &__container{
         height: 25vw;
+        min-height: 200px;
         overflow: hidden;
         position: relative;
         @media screen and (max-width: 960px) {
